--- a/services.css
+++ b/services.css
@@ -170,6 +170,13 @@ h2 {
         font-size: 24px;
         font-weight: bold;
     }
+
+    .achievement-card.overall-rating {
+        left: 180px;
+        top: 170px;
+        width: 100px;
+    }
+     
 }
 
 
