--- a/about.css
+++ b/about.css
@@ -147,6 +147,13 @@ h2 {
         color: rgb(255, 255, 255);
         padding-top: 10px;
     }
+
+    .achievement-card.overall-rating {
+        left: 180px;
+        top: 170px;
+        width: 100px;
+    }
+     
 }
 
 
